added sleep to db_logger incase DB is not running yet.  needed for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ db:
         - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=root
         - POSTGRES_DB=twitch
+    ports:
+        - "5432:5432"
